--- a/Crawl/Crawl/Views/AboutPage.xaml
+++ b/Crawl/Crawl/Views/AboutPage.xaml
@@ -137,30 +137,12 @@
                 </StackLayout>
 
                 <!-- Debug Settings frame-->
-                
                 <StackLayout
                     x:Name="DebugSettingsFrame"
                     IsVisible="False"
                     BackgroundColor="WhiteSmoke"
                     HorizontalOptions="FillAndExpand"
                     VerticalOptions="StartAndExpand">
-                    
-                    <StackLayout
-                    HorizontalOptions="FillAndExpand"
-                    Orientation="Horizontal">
-
-                        <Label 
-                        Text="Critical Hit Double Damage"
-                        Style="{DynamicResource DebugSwitchLabel}"
-                        />
-
-                        <Switch 
-                        x:Name="EnableCriticalHitDamage"
-                        HorizontalOptions="EndAndExpand"
-                        Toggled="EnableCriticalHitDamage_OnToggled"
-                        IsToggled="False"/>
-                    </StackLayout>
-
 
                     <!-- Mock database settings-->
                     <StackLayout
@@ -180,7 +162,25 @@
                                     Toggled="UseMockDataSourceSwitch_OnToggled"
                                     IsToggled="False"/>
                     </StackLayout>
-                    
+
+                    <!-- enable critical hit double damage -->
+                    <StackLayout
+                    HorizontalOptions="FillAndExpand"
+                    Orientation="Horizontal">
+
+                        <Label 
+                        Text="Critical Hit Double Damage"
+                        Style="{DynamicResource DebugSwitchLabel}"
+                        />
+
+                        <Switch 
+                        x:Name="EnableCriticalHitDamage"
+                        HorizontalOptions="EndAndExpand"
+                        Toggled="EnableCriticalHitDamage_OnToggled"
+                        IsToggled="False"/>
+                    </StackLayout>
+
+                    <!-- enable critical miss -->
                     <StackLayout
                     HorizontalOptions="FillAndExpand"
                     Orientation="Horizontal">
