Added PartyListView of characters to BattlePartyPage

--- a/Crawl/Crawl/Views/Battle/BattlePartyPage.xaml
+++ b/Crawl/Crawl/Views/Battle/BattlePartyPage.xaml
@@ -9,6 +9,46 @@
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
 
+            <ListView x:Name="PartyListView"
+                ItemsSource="{Binding Dataset}"
+                VerticalOptions="FillAndExpand"
+                HasUnevenRows="true"
+                RefreshCommand="{Binding LoadItemsCommand}"
+                IsPullToRefreshEnabled="true"
+                IsRefreshing="{Binding IsBusy, Mode=OneWay}"
+                CachingStrategy="RecycleElement"
+                ItemSelected="OnItemSelected">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <StackLayout Padding="10"
+                             Orientation="Horizontal"
+                             VerticalOptions="Start"
+                             HorizontalOptions="CenterAndExpand">
+
+                                <StackLayout>
+                                    <StackLayout Orientation="Vertical">
+                                        <!-- Class Attribute -->
+                                        <Label Text="{Binding Type}"
+                                   Style="{DynamicResource ListItemTextStyle}"
+                                   FontSize="16" 
+                                   TextColor="Teal"
+                                   HorizontalTextAlignment="Center"/>
+
+                                        <!-- Name Attribute -->
+                                        <Label Text="{Binding Name}"
+                                   Style="{DynamicResource ListItemTextStyle}"
+        					       FontAttributes="Bold"
+                                   FontSize="16" />
+                                    </StackLayout>
+                                </StackLayout>
+
+                            </StackLayout>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+
             <Button Clicked="OnCloseClicked" Text="Close"/>
 
         </StackLayout>
