--- a/Crawl/Crawl/Views/Battle/CharacterItemsPage.xaml
+++ b/Crawl/Crawl/Views/Battle/CharacterItemsPage.xaml
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Crawl.Views.Battle.CharacterItems">
+             x:Class="Crawl.Views.Battle.CharacterItemsPage">
     <ContentPage.Content>
         <StackLayout>
-            
+
             <!-- Title -->
             <Label Text="Character Item Page"
                    VerticalOptions="CenterAndExpand" 
@@ -17,7 +17,7 @@
 
             <!-- Back Button -->
             <Button Clicked="Back_Clicked" Text="Back"/>
-            
+
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
